--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,37 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@microsoft/signalr": "^5.0.10",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.23",
-    "@types/react": "^17.0.19",
-    "@types/react-calendar": "^3.4.3",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-infinite-scroller": "^1.2.2",
-    "axios": "^0.21.1",
-    "date-fns": "^2.23.0",
+    "@microsoft/signalr": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.13",
+    "@types/react": "^18.0.26",
+    "@types/react-calendar": "^3.9.0",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-infinite-scroller": "^1.2.3",
+    "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
-    "mobx": "^6.3.3",
-    "mobx-react-lite": "^3.2.1",
-    "react": "^17.0.2",
-    "react-calendar": "^3.4.0",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
+    "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-cropper": "^2.1.8",
-    "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.3.5",
-    "react-infinite-scroller": "^1.2.4",
-    "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^8.0.2",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
-    "typescript": "^4.4.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2",
-    "yup": "^0.32.9"
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
+    "web-vitals": "^3.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,9 +60,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.1.6",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/uuid": "^8.3.1",
-    "@types/yup": "^0.29.13"
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.0",
+    "@types/yup": "^0.29.14"
   }
 }
