--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@microsoft/signalr": "^7.0.12",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
