--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 appsettings.json
+reactivities.db-shm
+reactivities.db-wal
+.dtbcache.v2
+
 
 # User-specific files
 *.rsuser
