--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@microsoft/signalr": "^7.0.12",
     "@react-native-async-storage/async-storage": "^1.19.5",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
